# cstlemma

./: .gitignore  .gitmodules  MANIFEST.in  README.md  setup.cfg  setup.py
cstlemma/src/: XMLtext.cpp  basefrm.cpp  basefrm.h  basefrmpntr.cpp  basefrmpntr.h  cstlemma.cpp  flattext.cpp  flattext.h  functio.h  functiontree.cpp  functiontree.h  lemmatiser.cpp  lemmatiser.h  option.cpp  text.cpp  text.h  word.cpp  word.h
src/cstlemma/: cstlemma
src/cstlemma/src/: Makefile  basefrm.h  basefrmpntr.cpp  cstlemma.cpp  cstlemma_wrapper.cpp  functiontree.cpp  lemmatiser.cpp  lemmatiser.h  option.h  outputclass.cpp  py_cpp_conversion.cpp  py_cpp_conversion.hpp  word.cpp  word.h
src/pycstlemma/: cst_lemmatiser.py  test.txt
src/pycstlemma/src/: XMLtext.h  __init__.py  basefrmpntr.h  cst_lemmatiser.py  cstlemma_wrapper.cpp  flattext.h  functio.h  functiontree.h  lemmatiser.cpp  option.cpp  outputclass.h  text.h  word.h
