[metadata]
name = pycstlemma
version = 1.0
author = Matthijs Wesseling
author_email = matthijs.wesseling@dyme.app
description = Python wrapper around the cstLemma library the Center for Sprogteknologi in Copenhagen
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bladieblah/cstlemma
project_urls =
    Bug Tracker = https://github.com/Bladieblah/cstlemma/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = pycstlemma
python_requires = >=3.7